# Financial-Reconciliation-Platform

./: .gitignore  AGENTS.md  README.md  build-desktop.bat  build-desktop.sh
.agent/: CONTEXT.md  DECISION.md  GOAL.md  PROMPT.md  RULE.md  VISION.md
.ai-organization/: README.md
.ai-organization/core/: agent-lifecycle.md  decision-policy.md  escalation-policy.md  operating-rules.md  organization-policy.md
.ai-organization/organization/: departments.yaml  structure.yaml
.ai-organization/registry/: agent-registry.yaml  capability-registry.yaml  role-registry.yaml
.ai-organization/templates/: agent-job-description.md  decision-record.md  interview-report-frontend.md  interview-report.md  job-request-frontend.md  job-request.md  project-raci-optimization.md  project-raci.md
.github/workflows/: release.yml
backend/: .env  .env.example  __init__.py  alembic.ini  requirements.txt  run.py
backend/app/: main.py
backend/migrations/: env.py
backend/scripts/: __init__.py  backup_sqlite.py  create_admin.py  create_updater_manifest.py  seed_stores.py  verify_desktop_version.py  verify_updater_manifest.py
backend/tests/: conftest.py  test_api_contracts.py  test_authentication.py  test_backup_sqlite.py  test_batch_queries.py  test_channel_extraction.py  test_dashboard_aggregates.py  test_desktop_runtime.py  test_desktop_updater_configuration.py  test_example_acceptance.py  test_field_binding.py  test_finance_extraction.py  (+12 more)
docs/: 00-project.md
example/: 7月民院财务表.xlsx  中悦店财务报表2026年7月.xlsx  抖音收入.xlsx  美团收入.xlsx  通联好老板.xlsx
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src-tauri/: Cargo.toml  hooks.nsh  installer.nsi  tauri.conf.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
(+195 files in other folders)
