[package]
name = "frp-platform"
version = "0.0.0"
description = "Financial Reconciliation Platform Desktop Client"
authors = ["FRP Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-show", "shell-open", "fs-read-file", "fs-write-file", "dialog-save", "devtools", "os-all", "system-tray", "shell-sidecar", "updater"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"

[features]
# by default tauri system-tray is enabled
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
